--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,19 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  alice: ^0.4.2
+  dio: ^5.5.0+1
+  either_dart: ^1.0.0
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
   font_awesome_flutter: ^10.7.0
   freezed_annotation: ^2.4.4
   google_fonts: ^6.2.1
   intl: ^0.19.0
   json_annotation: ^4.9.0
+  riverpod_annotation: ^2.3.5
+  shared_preferences: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +28,9 @@ dev_dependencies:
   build_runner: ^2.4.11
   freezed: ^2.5.2
   json_serializable: ^6.8.0
+  riverpod_generator: ^2.4.0
+  custom_lint: ^0.6.4
+  riverpod_lint: ^2.3.10
 
 flutter:
   uses-material-design: true
