--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ dependencies:
   either_dart: ^1.0.0
   flutter:
     sdk: flutter
+  flutter_image_compress: ^2.3.0
   flutter_riverpod: ^2.5.1
   font_awesome_flutter: ^10.7.0
   freezed_annotation: ^2.4.4
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
   intl: ^0.19.0
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.3.5
